fix footer, horizontal scrollbar

--- a/src/components/FooterStyles.css
+++ b/src/components/FooterStyles.css
@@ -1,7 +1,6 @@
 .footer {
     position: relative;
     bottom: 0;
-    width: 100%;
     margin: 1rem;
 }
 
