--- a/src/index.css
+++ b/src/index.css
@@ -162,7 +162,6 @@ button:hover {
 
 .page {
   height: 100%;
-  width: 100%;
   margin-bottom: 4.8rem;
 }
 
